<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"

        android:background="@drawable/txt_bg"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:weightSum="2">

            <ImageView
                android:id="@+id/Iimage_search_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="7dp"
                android:layout_weight="1.7"
                android:src="@drawable/noimg" />

            <TextView
                android:id="@+id/Itxt_view_profile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:gravity="center_horizontal"
                android:text="@string/view_profile"
                android:textAlignment="center"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1.3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Itxt_search_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/name"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Itxt_search_layout_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/age"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/Itxt_search_layout_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/education"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/Itxt_search_layout_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/number"
                android:textColor="#000"
                android:textSize="15sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/Ilayout_kundli"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_reject_meeting"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_reject_bg"
                        android:text="@string/reject"
                        android:textAllCaps="false"
                        android:textColor="#fff" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_accept_meeting"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_accept_bg"
                        android:text="@string/accept"
                        android:textAllCaps="false"
                        android:textColor="#fff" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_join_meeting"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/btn_accept_bg"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/join_meeting"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:visibility="gone" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>