<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/txt_bg"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:weightSum="2"
            android:layout_marginLeft="8dp"
            android:orientation="vertical"
            android:layout_marginBottom="7dp">

            <ImageView
                android:id="@+id/Rimage_search_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.7"

                android:layout_marginTop="7dp"
                android:background="@drawable/noimg" />

            <TextView
                android:id="@+id/Rtxt_view_profile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/view_profile"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:layout_weight="1.3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Rtxt_search_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/name"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Rtxt_search_layout_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/age"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/Rtxt_search_layout_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/education"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_viewKundali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_gravity="right"
                android:text="गुणमिलन"
                android:textColor="@color/maroon"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_accept_interest"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/btn_reject_bg"
                    android:text="@string/reject"
                    android:textAllCaps="false"
                    android:textColor="#fff" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_reject_interest"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/btn_accept_bg"
                    android:text="@string/accept"
                    android:textAllCaps="false"
                    android:textColor="#fff" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>