<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="2dp"
            android:orientation="vertical"
            android:weightSum="2">

            <ImageView
                android:id="@+id/Aimage_search_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="7dp"
                android:layout_weight="1.6"
                android:src="@drawable/noimg"
                />

            <TextView
                android:id="@+id/Atxt_view_profile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:gravity="center"
                android:text="@string/view_profile"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1.3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Atxt_search_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2dp"
                android:text="@string/name"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/color"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/height"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/Atxt_search_layout_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/age"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"
                android:text="@string/education"
                android:textColor="#000"
                android:textSize="15sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="2dp"

                android:orientation="horizontal"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/btn_whats_app"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/whats_app" />

                <TextView
                    android:id="@+id/Aview_kundli"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="गुणमिलन"
                    android:textColor="@color/maroon"
                    android:textSize="16sp"
                    android:gravity="center"/>

                <ImageView
                    android:id="@+id/btn_meeting"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/schedule" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>