<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".Activities.LoginPage">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="160dp"
                android:layout_height="210dp"
                android:scaleType="centerCrop"
                android:src="@drawable/samta_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.15" />

            <EditText
                android:id="@+id/login_userName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/txt_grey_border"
                android:hint="@string/user_email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="12dp"
                android:paddingVertical="10dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.554"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/txt_grey_border"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="12dp"
                android:paddingVertical="10dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_userName"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="25dp"
                android:background="@drawable/btn_login1"
                android:padding="5dp"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_password" />

            <TextView
                android:id="@+id/txt_forgot_pass"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:padding="5dp"
                android:text="@string/forgot_password"
                android:textColor="#000"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/txt_new_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/txt_new_user"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/login_btn_bg"
                android:padding="5dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#6f194b"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/login_button"
                app:layout_constraintHorizontal_bias="0.414"
                app:layout_constraintStart_toStartOf="@+id/login_button"
                app:layout_constraintTop_toBottomOf="@+id/txt_forgot_pass" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
